--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
@@ -121,9 +121,7 @@
       </div>
       <div class="shop-cards clearfix">
         <article class="sedona">
-          <a href="#">
-            <img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576">
-          </a>
+          <img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">Sedona</a>
             <p>Информационный сайт для туристов</p>
@@ -131,9 +129,7 @@
           </div>
         </article>
         <article class="pink">
-          <a href="#">
-            <img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576">
-          </a>
+          <img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">Pink App</a>
             <p>Продуктовый лендинг приложения для IOS и Android</p>
@@ -141,9 +137,7 @@
           </div>
         </article>
         <article class="borodinsky">
-          <a href="#">
-            <img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576">
-          </a>
+          <img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">Barbershop</a>
             <p>Сайт салона кросоты. Для мужчин, да.</p>
@@ -151,9 +145,7 @@
           </div>
         </article>
         <article class="mishka">
-          <a href="#">
-            <img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576">
-          </a>
+          <img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">Mishka</a>
             <p>Интернет-магазин вязальных игрушек</p>
@@ -161,9 +153,7 @@
           </div>
         </article>
         <article class="a-plus">
-          <a href="#">
-            <img alt="A plus" src="img/img-aplus.jpg" width="360" height="576">
-          </a>
+          <img alt="A plus" src="img/img-aplus.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">A plus</a>
             <p>Лендинг курсов повышения квалификации</p>
@@ -171,9 +161,7 @@
           </div>
         </article>
         <article class="kvast">
-          <a href="#">
-            <img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576">
-          </a>
+          <img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576">
           <div class="price-box">
             <a href="#">Кваст</a>
             <p>Промо-сайт производителя крафтового кваса</p>
@@ -195,10 +183,8 @@
         <div class="address">
           <h4>Nёrds design studio</h4>
           <p>191186, Санкт-Петербург,<br>
-             ул. Б. Конюшенная, д. 19/8<br>
-             <br>
-             тел. +7 (812) 275-75-75
-          </p>
+             ул. Б. Конюшенная, д. 19/8</p>
+          <span>тел. +7 (812) 275-75-75</span>
           <a class="btn js-hidden-form" href="#">Напишите нам</a>
         </div>
         <div class="hidden-form">
@@ -227,6 +213,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/form.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
