--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
@@ -132,10 +132,8 @@
         <div class="address">
           <h4>Nёrds design studio</h4>
           <p>191186, Санкт-Петербург,<br>
-             ул. Б. Конюшенная, д. 19/8<br>
-             <br>
-             тел. +7 (812) 275-75-75
-          </p>
+             ул. Б. Конюшенная, д. 19/8</p>
+          <span>тел. +7 (812) 275-75-75</span>
           <a class="btn js-hidden-form" href="#">Напишите нам</a>
         </div>
         <div class="hidden-form">
@@ -164,6 +162,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/form.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
