--- a/catalog.html
+++ b/catalog.html
@@ -24,8 +24,6 @@
         <div class="basket">
           <a href="#">Корзина</a>
         </div>
-      </div>
-      <div class="leader container clearfix">
         <h1>Магазин готовых шаблонов</h1>
       </div>
     </header>
@@ -68,36 +66,36 @@
             <legend>Особенности:</legend>
             <ul>
               <li>
+                <input name="navigation" type="checkbox" id="slider" checked>
                 <label class="nerds-checkbox" for="slider">
-                  <input name="navigation" type="checkbox" id="slider" checked>
                   <span class="checkbox-indicator"></span>
                   Слайдер
                 </label>
               </li>
               <li>
+                <input name="navigation" type="checkbox" id="block">
                 <label class="nerds-checkbox" for="block">
-                  <input name="navigation" type="checkbox" id="block">
                   <span class="checkbox-indicator"></span>
                   Блок преимуществ
                 </label>
               </li>
               <li>
+                <input name="navigation" type="checkbox" id="news" checked>
                 <label class="nerds-checkbox" for="news">
-                  <input name="navigation" type="checkbox" id="news" checked>
                   <span class="checkbox-indicator"></span>
                   Новости
                 </label>
               </li>
               <li>
+                <input name="navigation" type="checkbox" id="galery">
                 <label class="nerds-checkbox" for="galery">
-                  <input name="navigation" type="checkbox" id="galery">
                   <span class="checkbox-indicator"></span>
                   Галерея
                 </label>
               </li>
               <li>
+                <input name="navigation" type="checkbox" id="car">
                 <label class="nerds-checkbox" for="car">
-                  <input name="navigation" type="checkbox" id="car">
                   <span class="checkbox-indicator"></span>
                   Корзина
                 </label>
@@ -179,7 +177,7 @@
     </main>
     <footer class="catalog-footer">
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5833949968173!2d30.320722954518185!3d59.93905483636798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1479521584817" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5833949968173!2d30.320722954518185!3d59.93905483636798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1479521584817" height="416" style="border:0" allowfullscreen></iframe>
         <div class="address">
           <h4>Nёrds design studio</h4>
           <p>191186, Санкт-Петербург,<br>
