--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </div>
       <div class="container clearfix">
         <div class="slider">
-          <input type="radio" id="btn-1" name="toggle" checked>
-          <input type="radio" id="btn-2" name="toggle">
-          <input type="radio" id="btn-3" name="toggle">
+          <input class="btn-one" type="radio" id="btn-1" name="toggle" checked>
+          <input class="btn-two" type="radio" id="btn-2" name="toggle">
+          <input class="btn-three" type="radio" id="btn-3" name="toggle">
           <div class="slider-controls">
             <label for="btn-1"></label>
             <label for="btn-2"></label>
@@ -134,20 +134,7 @@
           <p>191186, Санкт-Петербург,<br>
              ул. Б. Конюшенная, д. 19/8</p>
           <span>тел. +7 (812) 275-75-75</span>
-          <a class="btn js-hidden-form" href="#">Напишите нам</a>
-        </div>
-        <div class="hidden-form">
-          <b>Напишите нам</b>
-          <button class="hidden-form-close" type="button">X</button>
-          <form action="/echo" method="post">
-            <label for="name-field">Ваше имя:</label>
-            <label for="mail-field">Ваш e-mail:</label>
-            <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста" required>
-            <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа" required>
-            <label for="comment-field">Текст письма:</label>
-            <textarea name="comment" id="comment-field" placeholder="В свободной форме" required></textarea>
-            <button class="btn" type="submit">Отправить</button>
-          </form>
+          <a class="btn js-hidden-form" href="feedback.html">Напишите нам</a>
         </div>
       </div>
       <div class="container clearfix">
@@ -162,6 +149,21 @@
         </div>
       </div>
     </footer>
+    <div class="modal-content">
+      <div class="hidden-form">
+        <b>Напишите нам</b>
+        <button class="hidden-form-close" type="button">X</button>
+        <form action="#" method="post">
+          <label for="name-field">Ваше имя:</label>
+          <label for="mail-field">Ваш e-mail:</label>
+          <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста" required>
+          <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа" required>
+          <label for="comment-field">Текст письма:</label>
+          <textarea name="comment" id="comment-field" placeholder="В свободной форме" required></textarea>
+          <button class="btn" type="submit">Отправить</button>
+        </form>
+      </div>
+    </div>
     <script src="js/script.min.js"></script>
   </body>
 </html>
